# signal-stack

./: GEMINI.md
backend/: .env  .env.example  main.py  pyproject.toml  signalstack.db
backend/app/: __init__.py
backend/app/ai/: chat.py  config.py  vector_store.py
backend/app/api/: routes.py  schemas.py
backend/app/db/: database.py  models.py
backend/chroma_db/: chroma.sqlite3
backend/chroma_db/6322791b-5a2c-4308-9191-42b7a02bff4c/: index_metadata.pickle
backend/tests/: conftest.py  test_ai.py  test_api.py  test_db.py
client-mock-backend/: package.json  pnpm-lock.yaml  tsconfig.json
client-mock-backend/src/: index.ts
frontend/: dev.db  dev.db-shm  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/ai/chat/: route.ts
frontend/app/api/dashboard/stats/: route.ts
frontend/app/api/logs/: route.ts
frontend/app/api/projects/: route.ts
frontend/app/api/projects/[id]/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/logs/: page.tsx
frontend/app/dashboard/projects/: page.tsx
frontend/app/dashboard/reports/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/components/dashboard/: chat-chart.tsx  header.tsx  help-guide.tsx  request-card.tsx  sidebar.tsx
frontend/lib/: auth.ts  prisma.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260415150934_init/: migration.sql
sdk/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
sdk/src/: index.ts
(+1 files in other folders)
