[project]
name = "backend"
version = "0.1.0"
description = "Signalstack log ingestion backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",
    "pydantic-settings>=2.0.0",
]
