[project]
name = "backend"
version = "0.1.0"
description = "Signalstack log ingestion backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",
    "pydantic-settings>=2.0.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.4.1",
]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "strict"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
